# cwru_ariac_2018

./: README.md  bin_inspector_notes  box_inspector_fncs_soln.cpp  box_w_5_parts_flange_and_gear_displaced  box_w_5_parts_per_boxcam_1  exmpl_logical_camera_output  iiwa14_notes  manual_robot_move_cmd  notes  notes_qual2  progress_notes  project_to_do  qual2_config_notes
ariac_depth_camera/: CMakeLists.txt  README.md  package.xml
ariac_depth_camera/src/: display_pcd_file.cpp  interpret_pcd_file.cpp  pcd_snapshot_ariac.cpp
ariac_traj_sender/: README.md
ariac_traj_sender/src/: traj_sender.cpp
ariac_ur_fk_ik/: debug_ik_pose_notes  ik_debug_notes
ariac_ur_fk_ik/src/: ariac_ur10_fk_ik.cpp  ariac_ur10_fk_ik_test_main.cpp
ariac_xform_utils/src/: ariac_xform_utils.cpp
bin_inventory/: CMakeLists.txt  README.md  package.xml  part_model_list
bin_inventory/src/: bin_inventory.cpp  bin_inventory_test_main.cpp
box_inspector/: CMakeLists.txt  README.md  notes_todo  package.xml  test_data
box_inspector/include/box_inspector/: box_inspector.h  box_inspector2.h
box_inspector/src/: box_inspector.cpp  box_inspector2.cpp  box_inspector_example_main.cpp  box_inspector_fncs.cpp  box_inspector_fncs2.cpp  box_inspector_fncs_soln.cpp  fake_logical_camera.cpp  order_sender.cpp  order_sender2.cpp  order_sender_4parts.cpp  order_sender_6parts.cpp  order_sender_errs.cpp  order_sender_ideal.cpp
conveyor_as/: CMakeLists.txt  README.md  package.xml
conveyor_as/action/: conveyor.action
conveyor_as/src/: conveyor_as.cpp  conveyor_interface.cpp  example_conveyor_action_client.cpp  example_conveyor_interface_main.cpp
copy_of_team_config/: README  depthcam_config.yaml  qual1a.yaml  qual1b.yaml  qual2_config.yaml  qual2a.yaml  qual2b.yaml
cwru_ariac/: CMakeLists.txt
cwru_ariac/include/: AriacBase.h
cwru_ariac/msg/: Part.msg
cwru_ariac/src/: qualifier3.cpp
cwru_ariac_launch/: README.md  cwru_ariac.launch  package.xml  sample_environment.launch
cwru_ariac_launch/launch/: sample_environment.launch
example_opencv/: CMakeLists.txt  opencv2_and_kinetic  package.xml.disable
example_opencv/src/: find_red_pixels.cpp  find_red_pixels_no_callback.cpp
exmpl_competition_node/: CMakeLists.txt  README.md  package.xml
exmpl_competition_node/src/: exmpl_competition_node.cpp
inventory_msgs/: CMakeLists.txt  README.md  package.xml
inventory_msgs/msg/: Inventory.msg  Part.msg  PartInventory.msg
kuka_ac_test/: CMakeLists.txt  README.md  package.xml
kuka_ac_test/src/: kuka_test_action_client.cpp  kuka_test_action_client2.cpp
kuka_fk_ik/: CMakeLists.txt  README.md  kuka_fk_ik_test_notes  kuka_pose_notes  package.xml
kuka_fk_ik/src/: kuka_fk_ik.cpp  kuka_fk_ik_test_main.cpp
kuka_move_as/: CMakeLists.txt  README.md  dev_notes_3_30  package.xml  pose_notes
kuka_move_as/action/: RobotBehavior.action
kuka_move_as/src/: GripperInterface.cpp  compute_key_poses.cpp  kuka_behavior_as.cpp  kuka_behavior_as2.cpp  kuka_move_as.cpp  part_dimensions.h  pick_part_fnc.cpp  place_part_fnc.cpp  robot_behavior_interface.cpp  robot_behavior_test_main.cpp  test_pick_interactive_client.cpp  test_pick_part_fnc.cpp  test_pick_part_fnc_bin5.cpp  test_pick_part_fnc_no_grasp.cpp  transition_trajectories.cpp  transition_trajectories_temp.cpp  transition_trajectories_test_main.cpp
opencv_and_pcl/src/: pt_cloud_to_image.cpp
optimizer_func/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  README.md  package.xml
optimizer_func/action.orig/: optimizer_decision.action
optimizer_func/src/: decider.cpp  dumb_decider.cpp  dumb_optimizer_func.cpp  dumb_optimizer_node.cpp  helper_funcs.cpp  optimizer_func.cpp  optimizer_func_node.cpp
optimizer_func/srv/: optimizer_msgs.srv
order_filler/: CMakeLists.txt  README.md  notes  package.xml
order_filler/src/: order_manager.cpp  order_manager_test_main.cpp
order_manager/: CMakeLists.txt  README.md  package.xml
order_manager/src/: order_manager.cpp  order_manager_test_main.cpp  simple_order_manager.cpp
order_sender/: CMakeLists.txt  README.md  package.xml
order_sender/src/: order_sender.cpp  order_sender2.cpp
part_name_to_id/: CMakeLists.txt  README.md  package.xml
part_name_to_id/src/: part_name_to_id.cpp  part_name_to_id.h
pcl_utils/src/: .LCKpcd_snapshot_ariac.cpp~
robot_action_msgs/: CMakeLists.txt  README.md  package.xml
robot_behavior_interface/: CMakeLists.txt  README.md  package.xml
robot_behavior_interface/action/: RobotBehavior.action
robot_behavior_interface/src/: robot_behavior_interface.cpp  robot_behavior_test_main.cpp  test_pick_interactive_client.cpp
robot_move_as/: CMakeLists.txt  README.md  debug_notes  package.xml  pose_notes  robot_move_action_server_debug  robot_move_action_server_function_descriptions  robot_move_action_server_notes
robot_move_as/action/: RobotMove.action
robot_move_as/include/: RobotMoveActionServer.h
robot_move_as/src/: RobotInterface.cpp  RobotMove.cpp  compute_key_poses.cpp  flip_part_fnc.cpp  grasp_and_release_fncs.cpp  (+9 more)
shipment_filler/: CMakeLists.txt  README.md  notes  package.xml
shipment_filler/include/shipment_filler/: ShipmentFiller.h
shipment_filler/src/: .~lock.ShipmentFiller.cpp#  ShipmentFiller.cpp  demo_order_filler.cpp  shipment_filler.cpp  shipment_filler_test.cpp  shipment_filler_test_bad_part.cpp  simple_shipment_filler.cpp  simple_shipment_filler_w_optimizer.cpp  simple_shipment_filler_wsn_test.cpp  test_part_placement_from_inventory.cpp  test_part_placement_with_release.cpp  test_pick_from_box.cpp  test_pick_from_inventory.cpp  test_pick_interactive_client.cpp  test_robot_behaviors.cpp  unload_box.cpp  unload_box_v3.cpp  unload_box_v4.cpp
(+21 files in other folders)
